--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=rm92969
+spring.datasource.password=040604
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+# Configurações do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-stacktrace=never
+
+jwt.secret=meusecret
