--- a/pom.xml
+++ b/pom.xml
@@ -94,11 +94,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
+
+
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
-			<scope>runtime</scope>
+			<version>19.8.0.0</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
