--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.datasource.username=rm92969
 spring.datasource.password=040604
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-# Configurações do Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+
 
 server.error.include-stacktrace=never
 
