--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,9 @@ spring.datasource.username=rm92969
 spring.datasource.password=040604
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-stacktrace=never
 
